<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#D5E1E6"
        android:text="@string/txt_editarUsuario"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/EdiUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_ediUsuario"
        android:enabled="false"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EdiPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_contrasena"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/EdiNombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/EdiApellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_apellido"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnEdiRegistrar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_primary_15"
        android:text="@string/txt_actualizar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEdiCancelar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:text="@string/txt_cancelar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

</LinearLayout>