<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#D5E1E6"
        android:text="@string/txt_crearUsuario"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor,TextFields,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/RegUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_crearU"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/RegPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_crearC"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/RegNombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_crearN"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/RegApellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_crearA"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRegRegistrar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_primary_15"
        android:text="@string/txt_crearRegistrar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnRegCancelar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:text="@string/txt_crearCancelar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,VisualLintButtonSize" />

</LinearLayout>