<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/usuario" />

    <EditText
        android:id="@+id/User"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_usuario"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/txt_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_primary_15"
        android:text="@string/txt_entrar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Registrar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:text="@string/txt_registrar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

</LinearLayout>