<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/round_back_primary_15"
            android:text="@string/txt_btnEditar"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/round_back_primary_15"
            android:text="@string/txt_btnEliminar"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/round_back_dark_blue5_15"
            android:text="@string/txt_btnMostrar"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/round_back_dark_blue5_15"
            android:text="@string/txt_btnSalir"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/txt_mansaje"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:src="@drawable/usuario1"
        />

</LinearLayout>